--- a/RentalPropertyAnalyzer/Views/Home/Index.cshtml
+++ b/RentalPropertyAnalyzer/Views/Home/Index.cshtml
@@ -38,7 +38,7 @@
                                     <div class="row no-gutters align-items-center">
                                         <div class="col mr-2">
                                             <div class="text-xs font-weight-bold text-info text-uppercase mb-1">
-                                                My Saved Properties
+                                                Sarai's' Properties
                                             </div>
                                             <div class="h5 mb-0 font-weight-bold text-gray-800">@ViewBag.SavedPropertiesCount</div>
                                             
