--- a/RentalPropertyAnalyzer/Views/Home/Index.cshtml
+++ b/RentalPropertyAnalyzer/Views/Home/Index.cshtml
@@ -92,10 +92,18 @@
                             </div>
                         </div>
                         <div class="card-footer d-flex justify-content-between">
-                            <button type="button" class="btn btn-primary btn-sm">Generate Purchase Sheet</button>
-                             <a href="@Url.Action("DeleteProperty", new { zipID = property.ZipID })" class="btn btn-danger btn-sm" onclick="return confirm('Are you sure you want to delete this property?');">
-                                      Delete Property
-                             </a>
+                        @*     <button type="button" class="btn btn-primary btn-sm">Generate Purchase Sheet</button> *@
+
+                        <button 
+                        type="button" 
+                        class="btn btn-primary btn-sm" 
+                        onclick="location.href='@Url.Action("GeneratePurchaseSheet", "Home", new { zipID = property.ZipID })'">
+                        Generate Purchase Sheet
+                        </button>
+
+                        <a href="@Url.Action("DeleteProperty", new { zipID = property.ZipID })" class="btn btn-danger btn-sm" onclick="return confirm('Are you sure you want to delete this property?');">
+                                Delete Property
+                        </a>
                         </div>
                     </div>
 
